# autofunc

./: pyproject.toml  spec.py  toolspec.py
util/: methods.py  text.py
